<resources>
    <string name="app_name">Project X</string>
    <string name="choose">Choose what you want?</string>
    <string name="select_sorting">I want to do some sorting...</string>
    <string name="select_betting">I want to simulate football betting...</string>
    <string name="generate_random_numbers_text_view">Generate random numbers</string>
    <string name="title_sorting_text_view">Let\'s do some sorting</string>
    <string name="generate_button">Generate</string>
    <string name="show_numbers_text_view">TextView</string>
    <string name="chose_sorting_title_text_view">How would you like to sort generated numbers?</string>
    <string name="sort_numbers">Sort numbers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="system_ticket">System ticket?</string>
    <string name="how_many_games">How many games?</string>
    <string name="create_games">Create games</string>
    <string name="what_kind_of_system_this_is">What kind of system this is?</string>
    <string name="play_games">Play games</string>
    <string name="edit_text_hint">Least won matches?</string>
    <string name="ki_1">1ki</string>
    <string name="ki_2">2ki</string>
    <string name="ki_x">Xki</string>
    <string name="pp_1">1pp</string>
    <string name="pp_2">2pp</string>
    <string name="pp_x">Xpp</string>
    <string name="play_again">Play again</string>
    <string name="result_info">You need to guess all matches!</string>
    <string name="win_matches_at_least">You need %d guessed matches at least</string>
    <string name="x_first_half">X first half</string>
    <string name="first_half_1">1 first half</string>
    <string name="first_half_2">2 first half</string>
    <string name="x_ki">X final outcome</string>
    <string name="fr_1">1 final outcome</string>
    <string name="fr_2">2 final outcome</string>
    <string name="wrong_result">Something wrong</string>
    <string name="congr_won">Congratulation!!! You won!</string>
    <string name="congr_lose">This time you didn\'t win. Try again!</string>
    <string name="name">Name</string>
    <string name="prediction">Prediction</string>
    <string name="result">Result</string>
    <string name="guessed">Guessed</string>
</resources>
