<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/matchIdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/ki_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ki_1" />

        <RadioButton
            android:id="@+id/ki_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ki_2" />

        <RadioButton
            android:id="@+id/ki_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ki_x" />

        <RadioButton
            android:id="@+id/pp_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pp_1" />

        <RadioButton
            android:id="@+id/pp_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pp_2" />

        <RadioButton
            android:id="@+id/pp_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pp_x" />
    </RadioGroup>


</LinearLayout>