<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sorting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projects.pavlovic.vladimir.projectx.SortingActivity">

    <TextView
        android:text="@string/title_sorting_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SortingTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:textSize="20sp" />

    <TextView
        android:text="@string/generate_random_numbers_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/randomNumberText"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/show_numbers_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:id="@+id/generatedNumbersText"
        android:freezesText="true"
        android:visibility="invisible"
        android:layout_alignRight="@+id/pickSortTextView"
        android:layout_alignEnd="@+id/pickSortTextView" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/sorting_spinner"
        android:layout_below="@+id/pickSortTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/chose_sorting_title_text_view"
        android:layout_width="wrap_content"
        android:layout_below="@id/generatedNumbersText"
        android:layout_height="wrap_content"
        android:id="@+id/pickSortTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/sort_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sort_button"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:onClick="sortIt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_button"
        android:layout_alignLeft="@+id/generatedNumbersText"
        android:layout_alignStart="@+id/generatedNumbersText"
        android:layout_marginTop="16dp"
        android:id="@+id/sorted_numbers_text_view"
        android:freezesText="true"
        android:visibility="invisible" />

    <Button
        android:text="@string/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="generateRandomNumbers"
        android:layout_below="@+id/SortingTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp" />

</RelativeLayout>
