<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.projects.pavlovic.vladimir.projectx.BettingFragment"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/how_many_games"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.44" />

    <CheckBox
        android:text="@string/system_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="24dp" />

    <Button
        android:text="@string/create_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_games"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox"
        android:layout_marginTop="24dp"
        android:onClick="createGames" />

</android.support.constraint.ConstraintLayout>

